removed extraneous text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  <section  id="contact">
    <div class="layer">
      <h1 id="title">Contact</h1>
-     <div class="row">
+<!--     <div class="row">
        <div class="col-sm-5">
          <h5>ishaanr@seas.upenn.edu</h5>
          <h5>919-867-1207</h5>
@@ -67,7 +67,7 @@
        <div class="col-sm-7">
          Form
        </div>
-    </div>
+    </div> -->
    </div>
   </section>
   </body>
