--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Ishaan Rao</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top" id="mainNav">
       <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,9 +36,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#">Resume</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -50,7 +50,7 @@
     <section id="main">
       <div class="layer">
     <div id="title-container">
-          <h1 id="title">Ishaan Rao</h1>
+          <h1 class="title">Ishaan Rao</h1>
         </div>
         <footer class="footer" id="footer">
           <div class="row">
@@ -68,12 +68,14 @@
   </section>
   <section id="portfolio">
     <div class="layer">
-      <h1 id="title">Portfolio</h1>
+      <h1 class="title">Portfolio</h1>
+
+
     </div>
  </section>
  <section  id="contact">
    <div class="layer">
-     <h1 id="title">Contact</h1>
+     <h1 class="title">Contact</h1>
 <!--     <div class="row">
        <div class="col-sm-5">
          <h5>ishaanr@seas.upenn.edu</h5>
