--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
         <footer class="footer" id="footer">
           <div class="row">
             <div class="col-sm">
-              <a href="https://www.facebook.com/ishaan.rao.98" target="_blank" class="fa fa-facebook footerIcon"></a>
-              <a href="mailto:ishaanr@seas.upenn.edu" target="_blank" class="fa fa-envelope footerIcon"></a>
-              <a href="https://www.linkedin.com/in/ishaanr21" target="_blank" class="fa fa-linkedin footerIcon"></a>
-              <a href="https://github.com/ishaan-rao" target="_blank" class="fa fa-github footerIcon"></a>
-              <!-- <a href="#" target="_blank" class="fa fa-file"></a> -->
+              <a href="https://www.facebook.com/ishaan.rao.98" target="_blank" class="fa fa-facebook footer-icon"></a>
+              <a href="mailto:ishaanr@seas.upenn.edu" target="_blank" class="fa fa-envelope footer-icon"></a>
+              <a href="https://www.linkedin.com/in/ishaanr21" target="_blank" class="fa fa-linkedin footer-icon"></a>
+              <a href="https://github.com/ishaan-rao" target="_blank" class="fa fa-github footer-icon"></a>
             </div>
           </div>
       </footer>
@@ -71,52 +70,129 @@
   </section>
   <section id="portfolio">
     <div class="layer">
-      <h1 class="title sectionTitle">Portfolio</h1>
+      <h1 class="title section-title">Portfolio</h1>
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Genesys</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Brickbreaker</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Snake</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">CIS 121 TA</div>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Shodor</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">SEPTAssistant</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item"></div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item"></div>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Genesys</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Brickbreaker</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Snake</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">CIS 121 TA</div>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">Shodor</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item">SEPTAssistant</div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item"></div>
+        </div>
+        <div class="col-md-2">
+          <div class="portfolio-item"></div>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
+      <br>
     </div>
  </section>
  <section  id="contact">
    <div class="layer">
-    <h1 class="title sectionTitle">Contact</h1>
+    <h1 class="title section-title">Contact</h1>
     <div class="row">
-        <div class="col-md-1">
+        <div class="col-md-2">
         </div>
-        <div class="col-md-5">
-          <form>
-            <div class="formComponent">
+        <div class="col-md-4">
+          <form action="contact.php" method="post">
+            <div class="form-component">
               <p>Name: *</p>
-              <input type="text" id="nameInput" placeholder="Enter your name" required="required" class="form-control">
+              <input type="text" id="name-input" name="name-input" placeholder="Enter your name" required="required" class="form-control">
             </div>
             <br>
-            <div class="formComponent">
+            <div class="form-component">
               <p>Email Address: *</p>
-              <input type="email" id="emailInput" placeholder="Enter your email" required="required" class="form-control">
+              <input type="email" id="email-input" name="email-input" placeholder="Enter your email" required="required" class="form-control">
             </div>
             <br>
-            <div class="formComponent">
+            <div class="form-component">
               <p>Message: *</p>
-              <textarea rows="5" id="messageInput" placeholder="Enter your message" required="required" class="form-control"></textarea>
+              <textarea rows="5" id="message-input" name="message-input" placeholder="Enter your message" required="required" class="form-control"></textarea>
             </div>
             <div class="text-center mt-4">
-                <button class="btn btn-indigo" type="submit">Send</button>
+                <button id="submit-input" name="submit-input" class="btn btn-indigo" type="submit">Send</button>
             </div>
           </form>
         </div>
-        <div class="col-md-5">
-          <div id="contactDetails">
+        <div class="col-md-4">
+          <div id="contact-details">
             <div class="row">
               <div class="col-md-6">
-                <p><span class="fa fa-phone contactIcon"></span>+1 (919) 867-1207</p>
-                <p><span class="fa fa-envelope contactIcon"></span>ishaanr@seas.upenn.edu</p>
+                <p><span class="fa fa-phone contact-icon"></span>+1 (919) 867-1207</p>
+                <p><span class="fa fa-envelope contact-icon"></span>ishaanr@seas.upenn.edu</p>
               </div>
               <div class="col-md-6">
-                <p><span class="fa fa-linkedin contactIcon"></span>ishaanr21</p>
-                <p><span class="fa fa-github contactIcon"></span>ishaan-rao</p>
+                <p><span class="fa fa-linkedin contact-icon"></span>ishaanr21</p>
+                <p><span class="fa fa-github contact-icon"></span>ishaan-rao</p>
               </div>
             </div>
           </div>
           <iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=University%20of%20Pennsylvania+()&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/create-google-map/">Embed Google Map</a></iframe>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-2">
         </div>
     </div>
    </div>
