Working on portfolio

--- a/index.html
+++ b/index.html
@@ -71,83 +71,32 @@
   <section id="portfolio">
     <div class="layer">
       <h1 class="title section-title">Portfolio</h1>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-2">
         </div>
         <div class="col-md-2">
-          <div class="portfolio-item">Genesys</div>
+          <div class="portfolio-item">
+            <p class="portfolio-item-name">Item 1</p>
+          </div>
         </div>
         <div class="col-md-2">
-          <div class="portfolio-item">Brickbreaker</div>
+          <div class="portfolio-item">
+            <p class="portfolio-item-name">Item 1</p>
+          </div>
         </div>
         <div class="col-md-2">
-          <div class="portfolio-item">Snake</div>
+          <div class="portfolio-item">
+            <p class="portfolio-item-name">Item 1</p>
+          </div>
         </div>
         <div class="col-md-2">
-          <div class="portfolio-item">CIS 121 TA</div>
-        </div>
-        <div class="col-md-2">
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">Shodor</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">SEPTAssistant</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item"></div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item"></div>
+          <div class="portfolio-item">
+            <p class="portfolio-item-name">Item 1</p>
+          </div>
         </div>
         <div class="col-md-2">
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">Genesys</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">Brickbreaker</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">Snake</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">CIS 121 TA</div>
-        </div>
-        <div class="col-md-2">
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">Shodor</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">SEPTAssistant</div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item"></div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item"></div>
-        </div>
-        <div class="col-md-2">
-        </div>
-      </div>
-      <br>
-      <br>
+      </div> -->
     </div>
  </section>
  <section  id="contact">
