--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h1 class="title">Ishaan Rao</h1>
         </div>
         <div id="resume-button">
-          <a class="text-light" href="resume.html">Resume</a>
+          <a class="text-light" href="resume.html">R&eacute;sum&eacute;</a>
         </div>
         <footer class="footer" id="footer">
           <div class="row">
@@ -71,32 +71,127 @@
   <section id="portfolio">
     <div class="layer">
       <h1 class="title section-title">Portfolio</h1>
-      <!-- <div class="row">
+      <div class="row portfolio-row">
         <div class="col-md-2">
         </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">
-            <p class="portfolio-item-name">Item 1</p>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-activity">
+            <div class="front">
+              <p class="portfolio-item-name">Daily Pennsylvanian</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+
+              </p>
+              <a href="http://projects.thedp.com/" target="_blank" class="portfolio-url">Projects</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-project">
+            <div class="front">
+              <p class="portfolio-item-name">Brick Breaker</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+                A rendition of the classic arcade game, Brick Breaker, created with Java Swing.
+              </p>
+              <a href="https://github.com/ishaan-rao/brick-breaker" target="_blank" class="portfolio-url">Source Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-project">
+            <div class="front">
+              <p class="portfolio-item-name">NBA Hackathon</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+                At the NBA Hackathon, my team developed a model to predict the entertainment value
+                of any upcoming NBA game based on factors such as TV viewership, ticket sales, and team strength.
+                Due to restrictions by the NBA, our solution cannot be posted online.
+              </p>
+              <a href="https://hackathon.nba.com/" target="_blank" class="portfolio-url">Website</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-project">
+            <div class="front">
+              <p class="portfolio-item-name">Snake</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+                A rendition of the classic arcade game, Snake, created with JavaScript.
+              </p>
+              <a href="https://ishaan-rao.github.io/snake/" target="_blank" class="portfolio-url">Demo</a>
+            </div>
           </div>
         </div>
         <div class="col-md-2">
-          <div class="portfolio-item">
-            <p class="portfolio-item-name">Item 1</p>
-          </div>
         </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">
-            <p class="portfolio-item-name">Item 1</p>
-          </div>
-        </div>
-        <div class="col-md-2">
-          <div class="portfolio-item">
-            <p class="portfolio-item-name">Item 1</p>
-          </div>
-        </div>
+      </div>
+      <br>
+      <div class="row portfolio-row">
         <div class="col-md-2">
         </div>
-      </div> -->
+        <div class="col-md-2 portfolio-item-container">
+          <!-- <div class="portfolio-item portfolio-internship">
+            <div class="front">
+              <p class="portfolio-item-name">Shodor Education Foundation</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+                I was an intern at Shodor, where I taught workshops on programming,
+                web design, and modeling.
+              </p>
+              <a href="http://www.shodor.org/" target="_blank" class="portfolio-url">Website</a>
+            </div>
+          </div> -->
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-activity">
+            <div class="front">
+              <p class="portfolio-item-name">Access Engineering</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+              </p>
+              <a href="https://accessengineering.seas.upenn.edu/" target="_blank" class="portfolio-url">Website</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-activity">
+            <div class="front">
+              <p class="portfolio-item-name">Penn Dhamaka</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+                I am a dancer for Penn's only all male dance team. We perform a variety of styles including
+                hip hop, bhangra, Bollywood, and raas.
+              </p>
+              <a href="https://www.youtube.com/penndhamaka" target="_blank" class="portfolio-url">YouTube Channel</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <!-- <div class="portfolio-item portfolio-internship">
+            <div class="front">
+              <p class="portfolio-item-name">Genesys Inc.</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+
+              </p>
+              <a href="https://www.genesys.com/" target="_blank" class="portfolio-url">Website</a>
+            </div>
+          </div> -->
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
     </div>
  </section>
  <section  id="contact">
