--- a/resume.html
+++ b/resume.html
@@ -52,8 +52,13 @@
               </div>
               <div class="col-md-6">
                 <p class="education-school"><a href="https://www.upenn.edu/" class="resume-link">University of Pennsylvania</a></p>
+                <p class="education-college">School of Engineering and Applied Science</p>
                 <p class="education-degree">Bachelor's of Science in Engineering</p>
-                <p class="education-major">Computer Science</p>
+                <p class="education-major"><b>Major: </b>Computer Science</p>
+
+                <p class="education-college">The Wharton School</p>
+                <p class="education-degree">Bachelor's of Science in Economics</p>
+                <p class="education-major"><b>Concentration: </b>Business Analytics</p>
                 <p class="education-gpa"><b>GPA: </b> 3.6/4.0</p>
                 <p class="education-coursework"><b>Relevant Coursework:</b>
                   <ul class="coursework-list">
