--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-4">
-          <form action="contact.php" method="post">
+          <form action="" method="post">
             <div class="form-component">
               <p>Name: *</p>
               <input type="text" id="name-input" name="name-input" placeholder="Enter your name" required="required" class="form-control">
