--- a/resume.html
+++ b/resume.html
@@ -105,6 +105,32 @@
                 Experience
               </div>
               <div class="col-md-6">
+                <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">University of Pennsylvania</a></p>
+              </div>
+              <div class="col-md-3 experience-date">
+                Aug. 2018 - Present
+              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-8">
+                  <p class="experience-position">CIS 121 Teaching Assistant</p>
+                  <p class="experience-description">
+                    <ul class="experience-desc-list">
+                      <li>Teaching assistant for CIS 121: Data Structures and Algorithms which covers topics such as trees, graphs, heaps, sorting, searching, etc.</li>
+                      <li>Teach recitation once a week to review material from lecture</li>
+                      <li>Hold office hours multiple times a week to help students with concepts and problem sets</li>
+                    </ul>
+                  </p>
+                </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3 resume-section-title">
+              </div>
+              <div class="col-md-6">
                 <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">Genesys Inc.</a></p>
               </div>
               <div class="col-md-3 experience-date">
@@ -119,8 +145,10 @@
                   <p class="experience-position">Software Engineering Intern</p>
                   <p class="experience-description">
                     <ul class="experience-desc-list">
-                      <li>Design, build out, and execute automated testing to complement Genesys’ scalable, cloud-based web architecture</li>
-                      <li>Implement automated testing throughout Genesys’ products and software such as PureCloud</li>
+                      <li>Designed, developed, and implemented a new workflow for user creation in the PureCloud API to eliminate rate-limiting</li>
+                      <li>Added ability to translate messages to any language in PureCloud Collaborative chat to allow for truly global agent interactions (hackathon project)</li>
+                      <li>Implemented automated tests into PureCloud’s cloud-based, scalable architecture, including services such as Directory, User, Authorization, Upload/Download, and Voicemail</li>
+                      <li>Worked with PureCloud’s Public REST APIs with CI/CD, using dev tools such as AWS (S3 & SQS), Jenkins, Bitbucket, NewRelic and Sumologic</li>
                     </ul>
                   </p>
                 </div>
