--- a/resume.html
+++ b/resume.html
@@ -119,7 +119,7 @@
                   <p class="experience-position">CIS 121 Teaching Assistant</p>
                   <p class="experience-description">
                     <ul class="experience-desc-list">
-                      <li>Teaching assistant for CIS 121: Data Structures and Algorithms which covers topics such as trees, graphs, heaps, sorting, searching, etc.</li>
+                      <li>TA for CIS 121: Data Structures and Algorithms which covers topics such as trees, graphs, heaps, sorting, searching, etc.</li>
                       <li>Teach recitation once a week to review material from lecture</li>
                       <li>Hold office hours multiple times a week to help students with concepts and problem sets</li>
                     </ul>
