--- a/resume.html
+++ b/resume.html
@@ -161,7 +161,7 @@
                 <p class="experience-company"><a href="http://www.thedp.com/" class="resume-link">The Daily Pennsylvanian</a></p>
               </div>
               <div class="col-md-3 experience-date">
-                Jan. 2018 - Present
+                Jan. 2018 - May 2018
               </div>
             </div>
 
