--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,7 @@
                 <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">Genesys Inc.</a></p>
               </div>
               <div class="col-md-3 experience-date">
-                May. 2018 - Present
+                May. 2018 - Aug. 2018
               </div>
             </div>
 
