--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
             <div id="details">
               <p id="resume-name">Ishaan D. Rao</p>
               <p>Student at the University of Pennsylvania</p>
-              <p>Software Engineering Intern at Genesys</p>
+              <p>Software Engineering Intern at SAS</p>
               <p id="dots">&middot; &middot; &middot;</p>
               <div id="icons">
                 <a href="https://www.facebook.com/ishaan.rao.98" target="_blank" class="fa fa-facebook resume-icon"></a>
@@ -59,9 +59,11 @@
                 <p class="education-college">The Wharton School</p>
                 <p class="education-degree">Bachelor's of Science in Economics</p>
                 <p class="education-major"><b>Concentration: </b>Business Analytics</p>
-                <p class="education-gpa"><b>GPA: </b> 3.6/4.0</p>
+                <p class="education-gpa"><b>GPA: </b> 3.73/4.0</p>
                 <p class="education-coursework"><b>Relevant Coursework:</b>
                   <ul class="coursework-list">
+                    <li>Applied Machine Learning</li>
+                    <li>Corporate Finance</li>
                     <li>Data Structures and Algorithms</li>
                     <li>Engineering Probability</li>
                     <li>Linear Algebra and Differential Equations</li>
@@ -265,7 +267,7 @@
                 Skills
               </div>
               <div class="col-md-8">
-                <p><b>Languages: </b>CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; XML
+                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; XML
                 <p><b>Libraries and Frameworks: </b>Bootstrap &middot; jQuery
               </div>
             </div>
@@ -333,6 +335,17 @@
               </div>
               <div class="col-md-3 awards-date">
                 Dec. 2017
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 resume-section-title">
+              </div>
+              <div class="col-md-6">
+                <p class="awards-name">2nd Place MasterCard Puzzle Tournament</p>
+                <p class="awards-description"></p>
+              </div>
+              <div class="col-md-3 awards-date">
+                Mar. 2019
               </div>
             </div>
           </div>
