--- a/resume.html
+++ b/resume.html
@@ -107,6 +107,32 @@
                 Experience
               </div>
               <div class="col-md-6">
+                <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">SAS Institute</a></p>
+              </div>
+              <div class="col-md-3 experience-date">
+                May. 2019 - Aug. 2019
+              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-8">
+                  <p class="experience-position">Software Engineering Intern</p>
+                  <p class="experience-description">
+                    <ul class="experience-desc-list">
+                      <li>Implemented multinomial support for the logistic regression model on the Visual Analytics platform</li>
+                      <li>Resolved defects on the Visual Analytics platform relating to the decision tree, forecasting, and logistic regression models</li>
+                    </ul>
+                  </p>
+                </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3 resume-section-title">
+                Experience
+              </div>
+              <div class="col-md-6">
                 <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">University of Pennsylvania</a></p>
               </div>
               <div class="col-md-3 experience-date">
@@ -267,7 +293,7 @@
                 Skills
               </div>
               <div class="col-md-8">
-                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; XML
+                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; TypeScript &middot; XML
                 <p><b>Libraries and Frameworks: </b>Bootstrap &middot; jQuery
               </div>
             </div>
