--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
         <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-activity">
             <div class="front">
-              <p class="portfolio-item-name">Daily Pennsylvanian</p>
+              <p class="portfolio-item-name">Access Engineering</p>
             </div>
             <div class="back">
               <p class="portfolio-description">
-
               </p>
-              <a href="http://projects.thedp.com/" target="_blank" class="portfolio-url">Projects</a>
+              <a href="https://accessengineering.seas.upenn.edu/" target="_blank" class="portfolio-url">Website</a>
             </div>
           </div>
         </div>
@@ -101,6 +100,19 @@
           </div>
         </div>
         <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-activity">
+            <div class="front">
+              <p class="portfolio-item-name">Daily Pennsylvanian</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+
+              </p>
+              <a href="http://projects.thedp.com/" target="_blank" class="portfolio-url">Projects</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-project">
             <div class="front">
               <p class="portfolio-item-name">NBA Hackathon</p>
@@ -111,20 +123,7 @@
                 of any upcoming NBA game based on factors such as TV viewership, ticket sales, and team strength.
                 Due to restrictions by the NBA, our solution cannot be posted online.
               </p>
-              <a href="https://hackathon.nba.com/" target="_blank" class="portfolio-url">Website</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-2 portfolio-item-container">
-          <div class="portfolio-item portfolio-project">
-            <div class="front">
-              <p class="portfolio-item-name">Snake</p>
-            </div>
-            <div class="back">
-              <p class="portfolio-description">
-                A rendition of the classic arcade game, Snake, created with JavaScript.
-              </p>
-              <a href="https://ishaan-rao.github.io/snake/" target="_blank" class="portfolio-url">Demo</a>
+              <a href="NBA_Hackathon__Project_Summary.pdf" target="_blank" class="portfolio-url">Project Report</a>
             </div>
           </div>
         </div>
@@ -149,18 +148,7 @@
             </div>
           </div> -->
         </div>
-        <div class="col-md-2 portfolio-item-container">
-          <div class="portfolio-item portfolio-activity">
-            <div class="front">
-              <p class="portfolio-item-name">Access Engineering</p>
-            </div>
-            <div class="back">
-              <p class="portfolio-description">
-              </p>
-              <a href="https://accessengineering.seas.upenn.edu/" target="_blank" class="portfolio-url">Website</a>
-            </div>
-          </div>
-        </div>
+        
         <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-activity">
             <div class="front">
@@ -172,6 +160,19 @@
                 hip hop, bhangra, Bollywood, and raas.
               </p>
               <a href="https://www.youtube.com/penndhamaka" target="_blank" class="portfolio-url">YouTube Channel</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-project">
+            <div class="front">
+              <p class="portfolio-item-name">Snake</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+                A rendition of the classic arcade game, Snake, created with JavaScript.
+              </p>
+              <a href="https://ishaan-rao.github.io/snake/" target="_blank" class="portfolio-url">Demo</a>
             </div>
           </div>
         </div>
@@ -198,9 +199,9 @@
    <div class="layer">
     <h1 class="title section-title">Contact</h1>
     <div class="row">
-        <div class="col-md-2">
-        </div>
         <div class="col-md-4">
+        </div>
+        <!-- <div class="col-md-4">
           <form action="" method="post">
             <div class="form-component">
               <p>Name: *</p>
@@ -220,7 +221,7 @@
                 <button id="submit-input" name="submit-input" class="btn btn-indigo" type="submit">Send</button>
             </div>
           </form>
-        </div>
+        </div> -->
         <div class="col-md-4">
           <div id="contact-details">
             <div class="row">
@@ -236,7 +237,7 @@
           </div>
           <iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=University%20of%20Pennsylvania+()&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/create-google-map/">Embed Google Map</a></iframe>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
         </div>
     </div>
    </div>
