--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
         <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-activity">
             <div class="front">
+              <p class="portfolio-item-name">CIS 519: Final Project</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+              </p>
+              <a href="CIS_519_Final_Project.pdf" target="_blank" class="portfolio-url">Project Report</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-activity">
+            <div class="front">
               <p class="portfolio-item-name">Daily Pennsylvanian</p>
             </div>
             <div class="back">
@@ -111,6 +123,13 @@
               <a href="http://projects.thedp.com/" target="_blank" class="portfolio-url">Projects</a>
             </div>
           </div>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
+      <div class="row portfolio-row">
+        <div class="col-md-2">
         </div>
         <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-project">
@@ -126,27 +145,6 @@
               <a href="NBA_Hackathon__Project_Summary.pdf" target="_blank" class="portfolio-url">Project Report</a>
             </div>
           </div>
-        </div>
-        <div class="col-md-2">
-        </div>
-      </div>
-      <br>
-      <div class="row portfolio-row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-2 portfolio-item-container">
-          <!-- <div class="portfolio-item portfolio-internship">
-            <div class="front">
-              <p class="portfolio-item-name">Shodor Education Foundation</p>
-            </div>
-            <div class="back">
-              <p class="portfolio-description">
-                I was an intern at Shodor, where I taught workshops on programming,
-                web design, and modeling.
-              </p>
-              <a href="http://www.shodor.org/" target="_blank" class="portfolio-url">Website</a>
-            </div>
-          </div> -->
         </div>
         
         <div class="col-md-2 portfolio-item-container">
