--- a/resume.html
+++ b/resume.html
@@ -60,16 +60,18 @@
                 <p class="education-degree">Bachelor's of Science in Economics</p>
                 <p class="education-major"><b>Concentration: </b>Business Analytics</p>
                 <p class="education-gpa"><b>GPA: </b> 3.73/4.0</p>
+                <p class="education-gpa"><b>Honors: </b> Dean's List 2018-2019</p>
                 <p class="education-coursework"><b>Relevant Coursework:</b>
                   <ul class="coursework-list">
                     <li>Applied Machine Learning</li>
+                    <li>Automata, Computability, and Complexity</li>
                     <li>Corporate Finance</li>
                     <li>Data Structures and Algorithms</li>
-                    <li>Engineering Probability</li>
+                    <li>Introduction to Computer Architecture</li>
                     <li>Linear Algebra and Differential Equations</li>
                     <li>Mathematical Foundations of Computer Science</li>
                     <li>Managerial Economics</li>
-                    <li>Markets and Social Systems on the Internet</li>
+                    <li>Real Estate Investments</li>
                   </ul>
                 </p>
               </div>
@@ -122,6 +124,7 @@
                   <p class="experience-description">
                     <ul class="experience-desc-list">
                       <li>Implemented multinomial support for the logistic regression model on the Visual Analytics platform</li>
+                      <li>Added a confusion matrix visualization for the logistic regression model allowing users to understand the sensitivity and specificity of their models</li>
                       <li>Resolved defects on the Visual Analytics platform relating to the decision tree, forecasting, and logistic regression models</li>
                     </ul>
                   </p>
@@ -130,7 +133,6 @@
 
             <div class="row">
               <div class="col-md-3 resume-section-title">
-                Experience
               </div>
               <div class="col-md-6">
                 <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">University of Pennsylvania</a></p>
