--- a/resume.html
+++ b/resume.html
@@ -123,9 +123,9 @@
                   <p class="experience-position">Software Engineering Intern</p>
                   <p class="experience-description">
                     <ul class="experience-desc-list">
-                      <li>Implemented multinomial support for the logistic regression model on the Visual Analytics platform</li>
-                      <li>Added a confusion matrix visualization for the logistic regression model allowing users to understand the sensitivity and specificity of their models</li>
-                      <li>Resolved defects on the Visual Analytics platform relating to the decision tree, forecasting, and logistic regression models</li>
+                      <li>Design, develop, and implement a confusion matrix visualization allowing customers to better understand the performance of their classification models on the Visual Analytics (VA) platform</li>
+                      <li>Implement multinomial support for the logistic regression model in VA so users can now predict multiclass response variables</li>
+                      <li>Resolve defects on the Visual Analytics platform relating to the decision tree, forecasting, and linear regression models in VA</li>
                     </ul>
                   </p>
                 </div>
@@ -150,7 +150,7 @@
                   <p class="experience-description">
                     <ul class="experience-desc-list">
                       <li>TA for CIS 121: Data Structures and Algorithms which covers topics such as trees, graphs, heaps, sorting, searching, etc.</li>
-                      <li>Teach recitation once a week to review material from lecture</li>
+                      <li>Teach recitation to students once a week to review material from lecture</li>
                       <li>Hold office hours multiple times a week to help students with concepts and problem sets</li>
                     </ul>
                   </p>
