--- a/resume.html
+++ b/resume.html
@@ -123,9 +123,9 @@
                   <p class="experience-position">Software Engineering Intern</p>
                   <p class="experience-description">
                     <ul class="experience-desc-list">
-                      <li>Design, develop, and implement a confusion matrix visualization allowing customers to better understand the performance of their classification models on the Visual Analytics (VA) platform</li>
-                      <li>Implement multinomial support for the logistic regression model in VA so users can now predict multiclass response variables</li>
-                      <li>Resolve defects on the Visual Analytics platform relating to the decision tree, forecasting, and linear regression models in VA</li>
+                      <li>Designed, developed, and implemented a confusion matrix visualization allowing customers to better understand the performance of their classification models on the Visual Analytics (VA) platform</li>
+                      <li>Implemented multinomial support for the logistic regression model in VA so users can predict multiclass response variables</li>
+                      <li>Resolved defects on the Visual Analytics platform relating to the decision tree, forecasting, and linear regression models</li>
                     </ul>
                   </p>
                 </div>
@@ -295,7 +295,7 @@
                 Skills
               </div>
               <div class="col-md-8">
-                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; TypeScript &middot; XML
+                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; SAS &middot; TypeScript &middot; XML
                 <p><b>Libraries and Frameworks: </b>Bootstrap &middot; jQuery
               </div>
             </div>
