--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
           </div>
         </div>
         <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-internship">
+            <div class="front">
+              <p class="portfolio-item-name">R Programming Manual</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+
+              </p>
+              <a href="RProgrammingManual.pdf" target="_blank" class="portfolio-url">PDF</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-project">
             <div class="front">
               <p class="portfolio-item-name">Snake</p>
@@ -173,19 +186,6 @@
               <a href="https://ishaan-rao.github.io/snake/" target="_blank" class="portfolio-url">Demo</a>
             </div>
           </div>
-        </div>
-        <div class="col-md-2 portfolio-item-container">
-          <!-- <div class="portfolio-item portfolio-internship">
-            <div class="front">
-              <p class="portfolio-item-name">Genesys Inc.</p>
-            </div>
-            <div class="back">
-              <p class="portfolio-description">
-
-              </p>
-              <a href="https://www.genesys.com/" target="_blank" class="portfolio-url">Website</a>
-            </div>
-          </div> -->
         </div>
         <div class="col-md-2">
         </div>
