--- a/umer.html
+++ b/umer.html
@@ -5,16 +5,19 @@
 	</head>
 
 	<body>
-		<h1>Judge: Umer Qureshi</h1>
+		<h1>Judge:Umer Qureshi</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="https://google.com">
 			<div id="mario"> 
+				<img src="mario.png"></img>
 			</div>
 		</a>
 
 		<a href="https://espn.com">
-		<div id="luigi"> 
-		</div>
+			<div id="luigi"> 
+				<img src="luigi.png"></img>
+			</div>
+		</a>
 	</body>
 
 </html>
