--- a/aniket.html
+++ b/aniket.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Judge: Aniket Shah</h1>
+		<h1>Aniket Shah</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="https://google.com">
 			<div id="mario"> 
