--- a/divyanka.html
+++ b/divyanka.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Judge: Divyanka Gupta</h1>
+		<h1>Divyanka Gupta</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="https://google.com">
 			<div id="mario"> 
