--- a/erin.html
+++ b/erin.html
@@ -7,13 +7,13 @@
 	<body>
 		<h1>Erin Peyrani</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
-		<a href="https://192.168.10.166/votered">
+		<a href="http://192.168.10.166/votered">
 			<div id="mario"> 
 				<img src="mario.png"></img>
 			</div>
 		</a>
 
-		<a href="https://192.168.10.166/votegreen">
+		<a href="http://192.168.10.166/votegreen">
 			<div id="luigi"> 
 				<img src="luigi.png"></img>
 			</div>
