--- a/aniket.html
+++ b/aniket.html
@@ -7,13 +7,13 @@
 	<body>
 		<h1>Aniket Shah</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
-		<a href="https://google.com">
+		<a href="http://192.168.10.194/votered">
 			<div id="mario"> 
 				<img src="mario.png"></img>
 			</div>
 		</a>
 
-		<a href="https://espn.com">
+		<a href="http://192.168.10.194/votegreen">
 			<div id="luigi"> 
 				<img src="luigi.png"></img>
 			</div>
