--- a/divyanka.html
+++ b/divyanka.html
@@ -7,13 +7,13 @@
 	<body>
 		<h1>Divyanka Gupta</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
-		<a href="https://google.com">
+		<a href="http://192.168.10.59/votered">
 			<div id="mario"> 
 				<img src="mario.png"></img>
 			</div>
 		</a>
 
-		<a href="https://espn.com">
+		<a href="http://192.168.10.59/votegreen">
 			<div id="luigi"> 
 				<img src="luigi.png"></img>
 			</div>
