--- a/sonia.html
+++ b/sonia.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Aniket Shah</h1>
+		<h1>Sonia Arya</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="http://192.168.10.194/votered">
 			<div id="mario"> 
