Update and rename erin.html to nisha.html

--- a/nisha.html
+++ b/nisha.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Erin Peyrani</h1>
+		<h1>Nisha Pawar</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="http://192.168.10.166/votered">
 			<div id="mario"> 
