--- a/eshanka.html
+++ b/eshanka.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Keerthana Pakanati</h1>
+		<h1>Eshanka Jayasinghe</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="http://192.168.10.240/votered">
 			<div id="mario"> 
