--- a/khiry.html
+++ b/khiry.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Umer Qureshi</h1>
+		<h1>Khiry Brothers</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="http://192.168.10.125/votered">
 			<div id="mario"> 
