--- a/pavan.html
+++ b/pavan.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Divyanka Gupta</h1>
+		<h1>Pavan Gedala</h1>
 		<p>Please select <b id="red">RED for Mario</b> or <b id="green">GREEN for Luigi</b></p>
 		<a href="http://192.168.10.59/votered">
 			<div id="mario"> 
